<resources>
    <string name="app_name">Playlist Maker</string>

    <string name="main_title">Playlist maker</string>
    <string name="main_search_button_text">Поиск</string>
    <string name="main_library_button_text">Медиатека</string>
    <string name="main_settings_button_text">Настройки</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_dark_switcher_text">Темная тема</string>
    <string name="settings_share_button_text">Поделиться приложением</string>
    <string name="settings_support_button_text">Написать в поддержку</string>
    <string name="settings_agreement_button_text">Пользовательское соглашение</string>

    <string name="app_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="share_via">Поделиться с помощью:</string>
    <string name="support_email">rusared@ya.ru</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_title">Поиск</string>
    <string name="input_hint">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_button_text">Обновить</string>
    <string name="track_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_progress">00:00</string>
    <string name="track_not_found">Трек не найден</string>

</resources>