<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/main_background_color"
    android:fitsSystemWindows="true" >

    <com.google.android.material.appbar.MaterialToolbar
        app:title="@string/main_title"
        style="@style/TitleStyle"
        app:titleTextAppearance="@style/TitleStyle"
        app:titleTextColor="@color/white" >
    </com.google.android.material.appbar.MaterialToolbar>

    <Button
        android:id="@+id/main_search_button"
        android:text="@string/main_search_button_text"
        android:layout_marginTop="@dimen/first_button_marginTop"
        app:icon="@drawable/search_icon"
        style="@style/MainButtonStyle"
        app:iconTint="@color/black_1A" />

    <Button
        android:id="@+id/main_library_button"
        android:text="@string/main_library_button_text"
        app:icon="@drawable/library_icon"
        style="@style/MainButtonStyle"
        app:iconTint="@color/black_1A" />

    <Button
        android:id="@+id/main_settings_button"
        android:text="@string/main_settings_button_text"
        android:layout_marginBottom="28dp"
        app:icon="@drawable/settings_icon"
        android:elevation="50dp"
        style="@style/MainButtonStyle"
        app:iconTint="@color/black_1A" />

</LinearLayout>