<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_search"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_search_back_button"
        style="@style/TitleStyle"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back_icon"
        app:navigationIconTint="?attr/title_color"
        app:title="@string/search_title"
        app:titleTextAppearance="@style/TitleStyle"
        app:titleTextColor="?attr/title_color"/>

    <FrameLayout
        android:theme="@style/Theme.PlaylistMaker"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="@dimen/display_regular_paddingHorizontal"
        android:paddingVertical="8dp"
        android:background="?attr/background_color" >

        <EditText
            android:id="@+id/et_query_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/view_regular_paddingHorizontal"
            android:background="@drawable/edittext_form"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="@dimen/icon_to_text_padding"
            android:paddingEnd="@dimen/clear_icon_width"
            android:drawableTint="?attr/editText_hint_color"
            android:hint="@string/input_hint"
            android:maxLength="50"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="?attr/editText_hint_color"
            android:textCursorDrawable="@drawable/cursor_icon"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/iv_clear_icon"
            android:layout_width="@dimen/clear_icon_width"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:paddingHorizontal="@dimen/view_regular_paddingHorizontal"
            android:src="@drawable/clear_icon"
            app:tint="?attr/editText_hint_color"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tracks_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/view_regular_margin" />

        <LinearLayout
            android:id="@+id/ll_placeholder_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/view_large_margin"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/iv_placeholder_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/connection_problem_placeholder"/>

            <TextView
                android:id="@+id/tv_placeholder_message"
                android:layout_marginTop="@dimen/view_regular_margin"
                tools:text="@string/connection_problem"
                style="@style/SearchPlaceholderTextStyle" />

            <Button
                android:id="@+id/b_placeholder_message"
                android:layout_marginTop="@dimen/view_large_margin"
                android:text="@string/update_button_text"
                style="@style/OrdinaryButtonStyle"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_track_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/track_history_title"
                style="@style/SearchHistoryTitleStyle" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_track_history_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="68dp"/>

                <Button
                    android:id="@+id/b_track_history_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center|bottom"
                    android:text="@string/clear_history"
                    style="@style/OrdinaryButtonStyle" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>